   luminotes.com. Also included a section on search performance within the
   INSTALL file.
 * Added permalinks to blog and discussion forum posts.
 * Fixed a bug in Internet Explorer in which clicking a link sometimes caused
   the browser window to scroll to the destination note, only to immediately
   scroll back to the clicked link.
 * NOTE: Luminotes Server only, not Luminotes Desktop: Before you start
   Luminotes Server after this upgrade, run the following command as the
   PostgreSQL superuser (usually "postgres"):
     echo "create language plpgsql;" | psql luminotes
   Then, once you start Luminotes Server, be prepared to wait up to several
   minutes while the database search indices regenerate.

1.5.5: November 6, 2008
 * Improved speed of Luminotes Desktop by adding some database indices. This
   will help in particular for larger notebooks with many notes.
 * Added some code to automatically upgrade your database when upgrading to a
   new Luminotes release. This applies to all Luminotes products.
 * Added code to support Luminotes discussion forums.
 * Laid some of the foundational groundwork for future tags support.
 * Made the subscription pricing page a little less confusing by hiding some
   of the bigger plans by default.
 * Increased the limit on characters per note from 25,000 to 50,000.
 * Fixed a visual conflict between your web browser's search field
   autocomplete and Luminotes built-in suggest-as-you-type feature.
 * Fixed an occasional bug that caused unexpected logouts. The solution was
   to move the session information into the database where it could be
   properly locked.
 * NOTE: After upgrading to this release, you must restart memcached to clear
   the cache. Failing to do so will cause errors with the Note object. This
   does not apply to Luminotes Desktop.
 * NOTE: After upgrading to this release and starting Luminotes, you can
   optionally convert all existing user sessions with the script